2009-06-26  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Refactoring:
	* MonoDevelop.Ide.Refactoring/.svn:
	* MonoDevelop.Ide.Refactoring/Rename.cs:
	* MonoDevelop.Ide.Commands/RefactoryCommands.cs:
	* MonoDevelop.Ide.Refactoring/RenameItemDialog.cs:
	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.RenameItemDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Refactoring.RenameItemDialog.cs:
	* MonoDevelop.Ide.Refactoring/RefactoringPreviewDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Refactoring.RefactoringPreviewDialog.cs:
	  Worked on refactoring.

2009-06-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs:
	  Allow dropping files from nautilus/explorer to the project
	  pad.

2009-06-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs:
	* MonoDevelop.Ide.Gui/IdePreferences.cs: Get the default
	  msbuild file format from a const property.

2009-06-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs: Upgrade to latest msbuild
	  version when a new MD version is installed.

2009-06-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/IdePreferences.cs: Changed default
	  format to VS2008.

2009-06-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceNodeBuilder.cs:
	  Use new project reference icons.

2009-06-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.OptionPanels/AuthorInformationPanel.cs:
	  Use the new api for accessing user properties of a solution.

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Load/Save user
	  properties for projects and solutions.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs:
	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/IdeStartup.cs: